2-ns/vault/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: vault
spec:
  selector:
    app: vaultwarden
  ports:
    - name: http
      port: 80
      targetPort: http
